# godot_dodge_the_creeps

./: .gitignore  CMakeLists.txt  HUD.tscn  Main.tscn  Mob.tscn  Player.tscn  SConstruct  export_presets.cfg  project.godot
src/: gdlibrary.cpp  hud.cpp  hud.h  main.cpp  main.h  mob.cpp  mob.h  player.cpp  player.h
